--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -105,12 +105,15 @@ table.variations {
   .woocommerce-Reviews ol.commentlist li {
     padding: 10px 0;
     border-bottom: 1px solid #efefef; }
+    .woocommerce-Reviews ol.commentlist li:after {
+      content: '.';
+      font-size: 0;
+      display: block;
+      clear: both;
+      line-height: 0;
+      visibility: hidden; }
     .woocommerce-Reviews ol.commentlist li:last-of-type {
       border: none; }
-    .woocommerce-Reviews ol.commentlist li:after {
-      content: "";
-      clear: both;
-      display: block; }
     .woocommerce-Reviews ol.commentlist li img {
       float: left;
       margin: 0 13px 10px 0; }
