update styles such that star reviews actually appear again

--- a/assets/css/sass/woocomponents/_product_page.scss
+++ b/assets/css/sass/woocomponents/_product_page.scss
@@ -203,6 +203,19 @@ table.variations{
         }
     }
 
+    .sewchic-wc-star {
+        display:inline-block;
+        &:after{
+        }
+
+        &.sewchic-wc-star-full::after {
+            content: $full-star;
+        }
+        &.sewchic-wc-star-empty::after{
+            content: $empty-star;
+        }
+    }
+
 
 }
 
